# DynTrt

./: .gitignore  CMakeLists.txt  README.md
src/: AnyTraits.h  DynTrt.h
src/include/: DynTrt.h
src/misc/: Any.h
tests/: AnyTraits_Test.cpp  DynTraits_Ref.cpp  DynTraits_Test.cpp  VirtualHelper.cpp  VirtualHelper.h
